code/java/TimeSeriesAPIforDigitalPortals/v3/docs/PricesTimeSeriesIntradayListData.md


# PricesTimeSeriesIntradayListData

The data member contains the request's primary data.

## Properties

Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**id** | **String** | Identifier of the notation. | 
**type** | [**TypeEnum**](#TypeEnum) | Type of the price as configured for the customer. |  [optional]
**quality** | [**QualityEnum**](#QualityEnum) | Quality of the price. |  [optional]
**range** | [**PricesTimeSeriesIntradayListDataRange**](PricesTimeSeriesIntradayListDataRange.md) |  | 
**applyTickCorrections** | [**ApplyTickCorrectionsEnum**](#ApplyTickCorrectionsEnum) | This attribute represents the choice whether to apply insert, update, and delete corrections for individual ticks sent by the exchange or devised by FactSet Digital Solutions GmbH.   If the exchange or FactSet Digital Solutions GmbH decides to correct data, a correction instruction tick is sent shortly (usually on the same trading day) after dissemination of the corresponding original tick (if any). The correction instruction is then applied, yielding a corrected view. For \&quot;insert\&quot; corrections, there is no original tick, and the corrected view contains the inserted tick. For \&quot;update\&quot; corrections, the corrected view contains the updated original tick. For \&quot;delete\&quot; corrections, the original tick is removed from the corrected view. |  [optional]
**includeVolumeOnlyTicks** | **Boolean** | Include ticks that contain a volume without a price. |  [optional]
**adjustments** | [**VendorChartIQTimeSeriesIntradaySubsampleGetDataAdjustments**](VendorChartIQTimeSeriesIntradaySubsampleGetDataAdjustments.md) |  |  [optional]



## Enum: TypeEnum

Name | Value
---- | -----
TRADE | &quot;trade&quot;
BID | &quot;bid&quot;
ASK | &quot;ask&quot;
YIELD | &quot;yield&quot;



## Enum: QualityEnum

Name | Value
---- | -----
RLT | &quot;RLT&quot;
DLY | &quot;DLY&quot;
BST | &quot;BST&quot;



## Enum: ApplyTickCorrectionsEnum

Name | Value
---- | -----
NONE | &quot;none&quot;
ALL | &quot;all&quot;


## Implemented Interfaces

* Serializable


